<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/act_detalhes_noticia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context="com.made.uellisson.desafio_bemvendi_uls.activityes.Act_Detalhes_Noticia">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/secao"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tv_secao"
                android:textStyle="bold"
                android:textSize="18sp"
                android:paddingStart="5dp"
                android:paddingEnd="3dp"
                android:gravity="top|left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/tv_section"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="top|left" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/subSecao"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tv_subsecao"
                tools:text="@string/subSecao"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:paddingStart="5dp"
                android:paddingEnd="3dp"
                android:gravity="top|left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textPersonName"
                android:id="@+id/tv_subsection"
                android:gravity="top|left" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/titulo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/textView23"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:paddingStart="5dp"
                android:paddingEnd="3dp"
                android:gravity="top|left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/tv_title"
                android:gravity="top|left" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/resumo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/textView24"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:paddingStart="5dp"
                android:paddingEnd="3dp"
                android:gravity="top|left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/tv_abstract"
                android:layout_weight="1"
                android:gravity="top|left"
                android:paddingLeft="5dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/noticiaCompleta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/tv_url"
                android:gravity="top|left"
                android:paddingLeft="5dp"
                android:autoLink="all"
                android:linksClickable="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="10dp">

            <Button
                android:text="@string/voltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_voltar" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
